sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var length : Int = getValueCount();
  var i : Int;
    
  for(i <- 0 to length)
  {
  	for()
    
  }
    
}